UtahLiveDataTest/src/objects/SiteVisitSchedule__c.object
<CustomObject>
    <description>[Business] Site Visit Schedule is stored on this specific object</description>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SiteVisitReportPackage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Visit Report Package</label>
        <referenceTo>GNT__Package__c</referenceTo>
        <relationshipLabel>Site Visit Schedules</relationshipLabel>
        <relationshipName>Site_Visit_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Site Visit Schedule</label>
    <nameField>
        <displayFormat>S-{YYYY}-{0000}</displayFormat>
        <label>Schedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Visit Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>